--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
             </div>
           </div>
         </header>
+        <section class="bg-light" id="home">
+            <div class="container">
+            <div class="row intro">
+              <div class="col-md-4 text-center" style="padding: 10em;">
+                <h1>Hi!</h1>
+                <p><strong>W</strong>elcome here <strong>...</strong> </p>
+              </div>
+              <div class="col-md-8 text-center" style="padding: 12em;padding-top: 20em;">
+                <a style="text-decoration: none; color: inherit;" href="#about"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                </svg></a>
+              </div>
+            </div>
+          </div>
+          </section>
+          
 
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
