--- a/index.html
+++ b/index.html
@@ -56,7 +56,24 @@
             </div>
           </div>
           </section>
-          
+
+          <section class="secondSection" id="about">
+            <div class="container">
+            <div class="row intro">
+              <div class="col-md-8 text-center" style="padding: 12em;padding-top: 20em;">
+                <a style="text-decoration: none; color: white;" href="#experience"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                </svg></a> 
+              </div>
+              <div class="col-md-4 text-center" style="padding: 7em; padding-top: 9em;">
+                  <h1><strong>T</strong>ech</h1><br>
+                  <h3><Strong>I</Strong>n <strong> T</strong>ech</h3><br>
+                  <h4><Strong>E</Strong>ver <strong>T</strong>ech</h4><br>
+                  <p><strong>b</strong>lah ! ! <strong>b</strong>lah ! ! </p>
+              </div>
+            </div>
+          </div>
+          </section>
 
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
