--- a/index.html
+++ b/index.html
@@ -75,11 +75,30 @@
           </div>
           </section>
 
+          <section class="bg-light" id="experience">
+            <div class="container">
+            <div class="row intro">
+              <div class="col-md-4 text-center" style="padding: 5em; line-height: 2px;">
+                <div>
+                <h1>. <strong>S</strong>oftware <strong>T</strong>ester</h1><br>
+                <p>@<strong>C</strong>ognizant</p>
+                <small style="color: lightslategrey;"><strong>2</strong>019 <Strong>A</Strong>ugust - <strong>2</strong>021 <Strong>M</Strong>ay</small>
+              </div>
+              </div>
+              <div class="col-md-8 text-center" style="padding: 12em;padding-top: 20em;">
+                <a style="text-decoration: none; color: inherit;" href="#about"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                </svg></a>
+              </div>
+            </div>
+            </div>
+          </section>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
     </div>
+    
 </body>
 </html>
