contact number added

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="container">
             <div class="row intro">
               <div class="col-md-4 text-center" style="padding: 10em;">
-                <h1>Hi!</h1>
-                <p><strong>W</strong>elcome here <strong>...</strong> </p>
+                <h1>Hi!</h1><br>
+                <p><strong>W</strong>elcome here <strong>...</strong> </p><br>
               </div>
               <div class="col-md-8 text-center" style="padding: 12em;padding-top: 20em;">
                 <a style="text-decoration: none; color: inherit;" href="#about"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
@@ -84,12 +84,40 @@
                 <p>@<strong>C</strong>ognizant</p>
                 <small style="color: lightslategrey;"><strong>2</strong>019 <Strong>A</Strong>ugust - <strong>2</strong>021 <Strong>M</Strong>ay</small>
               </div>
-              </div>
+              </div><br>
               <div class="col-md-8 text-center" style="padding: 12em;padding-top: 20em;">
                 <a style="text-decoration: none; color: inherit;" href="#about"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                 </svg></a>
               </div>
+            </div>
+            </div>
+          </section>
+
+          <section id="contact">
+            <div class="container">
+            <div class="row intro">
+              
+              <div class="col-md-7 text-center" style="padding: 12em;padding-top: 20em;">
+                <a style="text-decoration: none; color: inherit;" href="#about"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                </svg></a>
+              </div>
+              <div class="col-md-5 " style="padding-top: 12em; line-height: 2px;">
+                <div style="width: 100%;" class="contactDetails">
+                  <a href="tel:703-409-6038" style="text-decoration: none; color: inherit;">
+                   <i style="float: left;" class="col-md-3  bi bi-telephone-fill"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                  </svg></i>
+                  <h3 class="col-md-9"><strong>7</strong>03 409 6038</h2></a>
+                </div><br>
+                <div class="contactDetails">
+                  
+                </div><br>
+                <div class="contactDetails">
+
+                </div><br>
+              </div><br>
             </div>
             </div>
           </section>
