email link added

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                 </svg></a>
               </div>
-              <div class="col-md-5 " style="padding-top: 12em; line-height: 2px;">
+              <div class="col-md-5 " style="padding-top: 12em; line-height: 10px;">
                 <div style="width: 100%;" class="contactDetails">
                   <a href="tel:703-409-6038" style="text-decoration: none; color: inherit;">
                    <i style="float: left;" class="col-md-3  bi bi-telephone-fill"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -112,7 +112,13 @@
                   <h3 class="col-md-9"><strong>7</strong>03 409 6038</h2></a>
                 </div><br>
                 <div class="contactDetails">
-                  
+                  <a href="mailto:arjunpdinesh333@gmail.com" style="text-decoration: none; color: inherit;">
+                    <i style="float: left;" class="col-md-3 bi bi-envelope-fill">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+                      </svg>
+                    </i>
+                   <h3 style="float: right;" class="col-md-9"><strong>a</strong>rjunpdinesh333@gamil.com</h3></a>
                 </div><br>
                 <div class="contactDetails">
 
