--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="rootStructure">
         <header id="header" class="col-md-12 my-auto p-3">
           <div class="row">
-            <div class="col-md-6">
-                <a href="#home" style="text-decoration: none; color: white;"><h1 class="mr-auto"> Arjun P Dinesh </h1></a> 
+            <div class="col-md-6" style="padding-left: 3em;">
+                <a href="#home" style="text-decoration: none; color: white;"><h1 class="mr-auto"><strong style="color: black;">  A</strong>rjun P Dinesh </h1></a> 
             </div>
             <div class="col-md-6 navigationBar my-auto">
                 <nav class="navbar navbar-expand-lg navbar-light">                    
