--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arjun</title>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -33,7 +34,7 @@
                             <a class="nav-link" href="#experience">Experience</a>
                           </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Contact</a>
+                          <a class="nav-link" href="#contact">Contact</a>
                         </li>
                       </ul>
                     </div>
@@ -41,15 +42,15 @@
             </div>
           </div>
         </header>
-        <section class="bg-light" id="home">
-            <div class="container">
+        <section class="bg-light col-md-12 " id="home">
+            <div class="grid container">
             <div class="row intro">
-              <div class="col-md-4 text-center" style="padding: 10em;">
+              <div class="col-md-4 col-xs-4 text-center" style="padding: 10em;">
                 <h1>Hi!</h1><br>
                 <p><strong>W</strong>elcome here <strong>...</strong> </p><br>
               </div>
               <div>
-              <div class="col-md-8 text-center" style="padding: 12em;padding-top: 20em;">
+              <div class="col-md-8 col-xs-4 text-center" style="padding: 12em;padding-top: 20em;">
                 <a style="text-decoration: none; color: inherit;" href="#about"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                 </svg></a>
@@ -103,7 +104,7 @@
                 
               </div>
               <div class="col-md-5 my-auto " style="line-height: 10px;">
-                <div style="width: 100%;" class="contactDetails">
+                <div style="width: 100%; margin-top: 2em;" class="contactDetails">
                   <a href="tel:703-409-6038" style="text-decoration: none; color: inherit;">
                    <i style="float: left;" class="col-md-3  bi bi-phone"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2e" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
                     <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
@@ -121,7 +122,7 @@
                    <h3 style="float: right;" class="col-md-9"><strong>a</strong>rjunpdinesh333@gamil.com</h3></a>
                 </div><br>
                 <div style="width: 100%; padding-top: 3em;"class="contactDetails">
-                  <div>
+                  <div style="margin-top: 2em;">
                   <a href="whatsapp://send?text=I would lik to chat with you. &phone=+917034096038" style="text-decoration: none; color: inherit;">
                     <i style="float: left;" class="col-md-3 bi bi-whatsapp">
                       <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
